--- a/index.html
+++ b/index.html
@@ -15,44 +15,46 @@
                 <div class="user-details">
                     <div class="input-box">
                         <span class="details">Full Name</span>
-                        <input type="text" placeholder="Enter your full name" required />
+                        <input id="fullNameId" type="text" placeholder="Enter your full name" required />
                     </div>
                     <div class="input-box">
                         <span class="details">Username</span>
-                        <input type="text" placeholder="Enter your username" required />
+                        <input id="usernameId" type="text" placeholder="Enter your username" required />
                     </div>
                     <div class="input-box">
                         <span class="details">Email</span>
-                        <input type="email" placeholder="Enter your email" required />
+                        <input id="emailId" type="email" placeholder="Enter your email" required />
                     </div>
                     <div class="input-box">
                         <span class="details">Phone Number</span>
-                        <input type="text" placeholder="Enter your phone number" required />
+                        <input id="phoneNumberId" type="text" placeholder="Enter your phone number" required />
                     </div>
                     <div class="input-box">
                         <span class="details">Password</span>
-                        <input type="password" placeholder="Enter your passowrd" required />
+                        <input id="passwordId" type="password" placeholder="Enter your passowrd" required />
                     </div>
                     <div class="input-box">
                         <span class="details">Confirm Password</span>
-                        <input type="password" placeholder="Enter your passowrd again" required />
+                        <input id="confirmPassowrdId" type="password" placeholder="Enter your passowrd again" required />
                     </div>
                 </div>
                 <div class="gender-details">
                     <span class="gender-title">Gender</span>
                     <div class="category">
-                        <input type="radio" name="gender" />
+                        <input id="maleInput" type="radio" name="gender" value="male" />
                         <span class="gender">Male</span>
-                        <input type="radio" name="gender" />
+                        <input id="femaleInput" type="radio" name="gender" value="famale" />
                         <span class="gender">Female</span>
                     </div>
                 </div>
-
-                <div class="button">
+                <h4 class="errorMessage" id="errorMessage"></h4>
+                <div id="submitButton" class="button">
                     <input type="submit" value="Register" />
                 </div>
             </form>
         </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
